--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="navbar-brand d-block d-lg-none">
 
                     <a href="home-page-1.html">
-                        <img class="logo" src="assets/img/hearder-logos.png" alt="logo">
+                        <img class="logo" src="assets/img/logo.png" alt="logo">
                     </a>
 
                 </div>
@@ -113,20 +113,9 @@
 
                         </li>
 
-                        <li class="nav-item dropdown">
+                        <li class="nav-item">
 
-                            <a class="nav-link dropdown-toggle" href="destination.html" id="destinationDropdown"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">Destinations</a>
-
-                            <ul class="dropdown-menu" aria-labelledby="destinationDropdown">
-
-                                <li><a class="dropdown-item" href="destination.html">Destinations</a>
-                                </li>
-                                <li><a class="dropdown-item" href="destination-details.html">Destination Details</a>
-                                </li>
-                                <li><a class="dropdown-item" href="destination-book.html">Destination Book</a></li>
-
-                            </ul>
+                            <a class="nav-link" href="destination.html" id="destinationDropdown">Destinations</a>
 
                         </li>
 
@@ -134,7 +123,7 @@
 
                     <div class="navbar-brand d-none d-lg-block">
                         <a href="home-page-1.html">
-                            <img class="logo center-logo" src="assets/img/" alt="logo">
+                            <img class="logo center-logo" src="assets/img/logo.png" alt="logo">
                         </a>
                     </div>
 
@@ -142,17 +131,7 @@
 
                         <li class="nav-item dropdown">
 
-                            <a class="nav-link dropdown-toggle" href="our-tour-page.html" id="tourDropdown"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">Our Tour</a>
-
-                            <ul class="dropdown-menu" aria-labelledby="tourDropdown">
-
-                                <li><a class="dropdown-item" href="our-tour-page.html">Our Tour</a></li>
-
-                                <li><a class="dropdown-item" href="our-tour-book-page.html">Our Tour Book</a></li>
-
-                            </ul>
-
+                            <a class="nav-link" href="our-tour-page.html" id="tourDropdown">Our Tour</a>
                         </li>
 
                         <li class="nav-item dropdown">
@@ -539,7 +518,7 @@
 
         <!-- About Us section -->
 
-        <section class="about-us" data-aos="fade-up">
+        <section class="about-us">
 
             <div class="container">
 
@@ -1108,7 +1087,7 @@
 
         <!-- Video section -->
 
-        <section class="video-sec" data-aos="zoom-out">
+        <section class="video-sec">
 
             <div class="container-fluid">
 
@@ -1281,12 +1260,7 @@
 
                                 </div>
 
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard dummy text ever, when an unknown printer
-                                    make
-                                    a type specimen book. Lorem Ipsum is simply dummy text of the printing and
-                                    typesetting industry.
-                                </p>
+                                <p>"The desert safari was the most exciting part of our trip! Dune bashing, camel rides, and sunset views were all amazing. The dinner and performances were beautifully done. Everything was well organized, and we felt completely immersed in Dubai’s culture." </p>
 
                                 <div class="rating">
                                     <i class="fas fa-star"></i>
@@ -1317,11 +1291,7 @@
 
                                 </div>
 
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard dummy text ever, when an unknown printer
-                                    make
-                                    a type specimen book. Lorem Ipsum is simply dummy text of the printing and
-                                    typesetting industry.</p>
+                                <p>"Our city tour was smooth, stylish, and packed with sights. From the Burj Khalifa to Dubai Marina, every stop was stunning. The guide was friendly and shared great stories. We felt like VIPs the entire day. The perfect way to explore Dubai in comfort!"</p>
 
                                 <div class="rating">
                                     <i class="fas fa-star"></i>
@@ -1352,11 +1322,7 @@
 
                                 </div>
 
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard dummy text ever, when an unknown printer
-                                    make
-                                    a type specimen book. Lorem Ipsum is simply dummy text of the printing and
-                                    typesetting industry.</p>
+                                <p>"Exploring Old Dubai was a unique experience. The historic streets, souks, and traditional buildings gave us a new perspective. The guide was informative and kind. We tasted local snacks and rode the abra. A great way to see the roots of this modern city!"</p>
 
                                 <div class="rating">
                                     <i class="fas fa-star"></i>
@@ -1388,11 +1354,7 @@
 
                                 </div>
 
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard dummy text ever, when an unknown printer
-                                    make
-                                    a type specimen book. Lorem Ipsum is simply dummy text of the printing and
-                                    typesetting industry.</p>
+                                <p>"Our Dubai honeymoon was everything we dreamed of! Sunset cruises, rooftop dinners, and private tours made every moment special. The agency planned everything so perfectly. We just relaxed and enjoyed. Dubai’s our first trip as a couple unforgettable."</p>
 
                                 <div class="rating">
                                     <i class="fas fa-star"></i>
@@ -1423,11 +1385,7 @@
 
                                 </div>
 
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard dummy text ever, when an unknown printer
-                                    make
-                                    a type specimen book. Lorem Ipsum is simply dummy text of the printing and
-                                    typesetting industry.</p>
+                                <p>"Traveling with our kids was easy thanks to this amazing tour. Activities like the aquarium and desert show kept everyone happy. We had fun, learned a lot, and made great memories. The guides were patient and helpful."</p>
 
                                 <div class="rating">
                                     <i class="fas fa-star"></i>
@@ -1458,11 +1416,7 @@
 
                                 </div>
 
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard dummy text ever, when an unknown printer
-                                    make
-                                    a type specimen book. Lorem Ipsum is simply dummy text of the printing and
-                                    typesetting industry.</p>
+                                <p>As a solo traveler, I felt welcomed and safe the entire time. I joined a small group tour and made great friends. The itinerary was well-balanced with fun and free time. Dubai exceeded my expectations. This agency made my solo trip stress-free .</p>
 
                                 <div class="rating">
                                     <i class="fas fa-star"></i>
