--- a/destination.html
+++ b/destination.html
@@ -225,8 +225,8 @@
                             <div class="d-flex align-items-center justify-content-between">
 
                                 <div class="destination-title">
-                                    <h6>New Zealand</h6>
-                                    <p>Aoraki / Mount Cook</p>
+                                    <h6>Destination</h6>
+                                    <p>Dubai</p>
                                 </div>
 
                                 <div class="destination-arrow">
@@ -267,8 +267,8 @@
                                 <div class="d-flex align-items-center justify-content-between">
 
                                     <div class="destination-title">
-                                        <h6>Elephant Beach</h6>
-                                        <p>Island beach</p>
+                                         <h6>Destination</h6>
+                                    <p>Dubai</p>
                                     </div>
 
                                     <div class="destination-arrow">
@@ -307,8 +307,8 @@
                                 <div class="d-flex align-items-center justify-content-between">
 
                                     <div class="destination-title">
-                                        <h6>Japan</h6>
-                                        <p>Kinkaku</p>
+                                            <h6>Destination</h6>
+                                    <p>Dubai</p>
                                     </div>
 
                                     <div class="destination-arrow">
@@ -351,8 +351,8 @@
                                 <div class="d-flex align-items-center justify-content-between">
 
                                     <div class="destination-title">
-                                        <h6>Greece</h6>
-                                        <p>Santorini Beach</p>
+                                              <h6>Destination</h6>
+                                    <p>Dubai</p>
                                     </div>
 
                                     <div class="destination-arrow">
@@ -409,8 +409,8 @@
                                 <div class="d-flex align-items-center justify-content-between">
 
                                     <div class="destination-title">
-                                        <h6>Thailand</h6>
-                                        <p>Bangkok</p>
+                           <h6>Destination</h6>
+                                    <p>Dubai</p>
                                     </div>
 
                                     <div class="destination-arrow">
@@ -449,8 +449,8 @@
                                 <div class="d-flex align-items-center justify-content-between">
 
                                     <div class="destination-title">
-                                        <h6>Vietnam</h6>
-                                        <p>Temple Of Literature</p>
+                                          <h6>Destination</h6>
+                                    <p>Dubai</p>
                                     </div>
 
                                     <div class="destination-arrow">
@@ -532,8 +532,8 @@
                                 <div class="d-flex align-items-center justify-content-between">
 
                                     <div class="destination-title">
-                                        <h6>France</h6>
-                                        <p>Palace of Versailles</p>
+                                         <h6>Destination</h6>
+                                    <p>Dubai</p>
                                     </div>
 
                                     <div class="destination-arrow">
@@ -574,8 +574,8 @@
                             <div class="d-flex align-items-center justify-content-between">
 
                                 <div class="destination-title">
-                                    <h6>Switzerland</h6>
-                                    <p>Engelberg</p>
+                              <h6>Destination</h6>
+                                    <p>Dubai</p>
                                 </div>
 
                                 <div class="destination-arrow">
