--- a/index.html
+++ b/index.html
@@ -136,16 +136,7 @@
 
                         <li class="nav-item dropdown">
 
-                            <a class="nav-link dropdown-toggle" href="blog-page.html" id="blogDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
-
-                            <ul class="dropdown-menu" aria-labelledby="blogDropdown">
-
-                                <li><a class="dropdown-item" href="blog-page.html">Blog</a></li>
-
-                                <li><a class="dropdown-item" href="blog-details-page.html">Blog Details</a></li>
-
-                            </ul>
+                            <a class="nav-link" href="blog-page.html" id="blogDropdown">Blog</a>
 
                         </li>
 
